clasical_corr within compound  - modularise me

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -610,32 +610,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Qualitative / Correlations:\n"
+    "Qualitative / Correlations:\n",
+    "\n",
+    "    clasical_corellogram                            #cell bellow is the first functioning draft of this for within compound\n",
+    "                                                    #needs to be modularised and have inputs n_minimum, p_val, BR_column_order, compounds_of_interest \n",
+    "                                                    #I would sugest we have a BR and a compound input to the function to chose which to look at and maybe a generate and save all option if needed\n",
+    "        within BR       /       within compound\n",
+    "\n",
+    "    bar_corellogram\n",
+    "                                                    #see whatsapp image 3/5/23\n",
+    "        within BR       /       within compound\n",
+    "\n",
+    "    square_correlogram\n",
+    "        within BR       /       within compound\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GETTING \"compound_df\" FROM \"TCB2_data_HPLC\" CACHE\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Multi-dimensional indexing (e.g. `obj[:, None]`) is no longer supported. Convert to a numpy array before indexing instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[86], line 85\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[39m#remove columns with n< n_minimum i.e. 6\u001b[39;00m\n\u001b[1;32m     84\u001b[0m n_count_series \u001b[39m=\u001b[39m df_to_correlate\u001b[39m.\u001b[39mcount()\n\u001b[0;32m---> 85\u001b[0m cunt \u001b[39m=\u001b[39m n_count_series\u001b[39m.\u001b[39;49mindex[n_count_series[\u001b[39m0\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m5\u001b[39;49m]\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m     86\u001b[0m \u001b[39m# cunt = n_count_series[n_count_series <= 6].index[0]\u001b[39;00m\n\u001b[1;32m     87\u001b[0m \n\u001b[1;32m     88\u001b[0m \u001b[39m# for single_BR in df_to_correlate:  #SHIT I TRIED DELETE WHEN n<n_minimum a vairable that will be fed to function but doesnt exist yet WORKS\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    102\u001b[0m \n\u001b[1;32m    103\u001b[0m \u001b[39m#plot shit # and yes i need to modulatrise and will do once we have the scafold down! \u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/indexes/base.py:5198\u001b[0m, in \u001b[0;36mIndex.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   5196\u001b[0m \u001b[39m# Because we ruled out integer above, we always get an arraylike here\u001b[39;00m\n\u001b[1;32m   5197\u001b[0m \u001b[39mif\u001b[39;00m result\u001b[39m.\u001b[39mndim \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m-> 5198\u001b[0m     disallow_ndim_indexing(result)\n\u001b[1;32m   5200\u001b[0m \u001b[39m# NB: Using _constructor._simple_new would break if MultiIndex\u001b[39;00m\n\u001b[1;32m   5201\u001b[0m \u001b[39m#  didn't override __getitem__\u001b[39;00m\n\u001b[1;32m   5202\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constructor\u001b[39m.\u001b[39m_simple_new(result, name\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name)\n",
-      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/indexers/utils.py:343\u001b[0m, in \u001b[0;36mdisallow_ndim_indexing\u001b[0;34m(result)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    336\u001b[0m \u001b[39mHelper function to disallow multi-dimensional indexing on 1D Series/Index.\u001b[39;00m\n\u001b[1;32m    337\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[39min GH#30588.\u001b[39;00m\n\u001b[1;32m    341\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    342\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39mndim(result) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 343\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    344\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mMulti-dimensional indexing (e.g. `obj[:, None]`) is no longer \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    345\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39msupported. Convert to a numpy array before indexing instead.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    346\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Multi-dimensional indexing (e.g. `obj[:, None]`) is no longer supported. Convert to a numpy array before indexing instead."
+      "GETTING \"compound_df\" FROM \"TCB2_data_HPLC\" CACHE\n",
+      "0.2mg/kgMDL for 3MT columns removed by n_minimum cut: ['SL1', 'VPL', 'SN']\n",
+      "0.2mg/kgMDL for A columns removed by n_minimum cut: ['V', 'DG']\n",
+      "0.2mg/kgMDL for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "0.2mg/kgMDL for TYR columns removed by n_minimum cut: ['M', 'SJ', 'SL6', 'SR6', 'MD', 'DG', 'SN', 'MR']\n",
+      "0.3mg/kgTCB for 3MT columns removed by n_minimum cut: ['SJ', 'SL6', 'dH', 'VPL']\n",
+      "0.3mg/kgTCB for 5HTP columns removed by n_minimum cut: ['SJ']\n",
+      "0.3mg/kgTCB for A columns removed by n_minimum cut: ['V', 'DG']\n",
+      "0.3mg/kgTCB for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "0.3mg/kgTCB for TYR columns removed by n_minimum cut: ['M', 'SJ', 'SL6', 'dH', 'VM', 'MD', 'DG', 'SN', 'CE']\n",
+      "10mg/kgTCB for 3MT columns removed by n_minimum cut: ['dH']\n",
+      "10mg/kgTCB for A columns removed by n_minimum cut: ['M', 'V', 'DG']\n",
+      "10mg/kgTCB for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "10mg/kgTCB for LDOPA columns removed by n_minimum cut: ['M']\n",
+      "10mg/kgTCB for TYR columns removed by n_minimum cut: ['OF', 'M', 'SJ', 'SL6', 'SR6', 'vH', 'VM', 'MD', 'VPL', 'DG', 'SN', 'MR', 'CE']\n",
+      "10mg/kgTCB for VMA columns removed by n_minimum cut: ['M']\n",
+      "3mg/kgTCB for 3MT columns removed by n_minimum cut: ['dH', 'VPL']\n",
+      "3mg/kgTCB for A columns removed by n_minimum cut: ['M', 'V']\n",
+      "3mg/kgTCB for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "3mg/kgTCB for TYR columns removed by n_minimum cut: ['OF', 'SR6', 'dH', 'vH', 'VM', 'MD', 'VPL', 'DG', 'SN', 'MR', 'CE']\n",
+      "TCB+MDL for 3MT columns removed by n_minimum cut: ['SL1']\n",
+      "TCB+MDL for A columns removed by n_minimum cut: ['V', 'DG']\n",
+      "TCB+MDL for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "TCB+MDL for LDOPA columns removed by n_minimum cut: ['M']\n",
+      "TCB+MDL for TYR columns removed by n_minimum cut: ['M', 'SJ', 'SL6', 'SR6', 'dH', 'VM', 'VPL', 'DG', 'SN', 'VTA', 'MR', 'CE']\n",
+      "TCB+MDL for VMA columns removed by n_minimum cut: ['M']\n",
+      "vehicles for 3MT columns removed by n_minimum cut: ['SL1', 'dH', 'SN']\n",
+      "vehicles for A columns removed by n_minimum cut: ['M', 'V']\n",
+      "vehicles for ASPN columns removed by n_minimum cut: ['SJ']\n",
+      "vehicles for LDOPA columns removed by n_minimum cut: ['M']\n",
+      "vehicles for TYR columns removed by n_minimum cut: ['OF', 'SJ', 'SL6', 'SR6', 'MD', 'VPL', 'DG', 'SN', 'MR']\n",
+      "vehicles for VMA columns removed by n_minimum cut: ['M']\n"
      ]
     }
    ],
@@ -686,7 +716,8 @@
     "            df[r]\n",
     "            pvalues[r][c] = scipy.stats.pearsonr(clean_r, clean_c)[1]\n",
     "\n",
-    "\n",
+    "    pvalues = pvalues.dropna(axis=1, how='all') # removing collums the rows that have all 'NaN' values\n",
+    "    pvalues = pvalues.dropna(axis=0, how='all')\n",
     "    return pvalues\n",
     "\n",
     "\n",
@@ -694,12 +725,9 @@
     "            'Am', 'dH', 'vH', 'NAc', 'VM', 'DM', 'VL', 'DL', 'MD', 'VPL', 'VPR', 'DG', \n",
     "            'Y', 'SC', 'SN', 'VTA', 'DR', 'MR', 'CE' ] \n",
     "\n",
-    "#within a BR between compounds\n",
-    "# for treatment_BR, treatment_BR_groupby_df in df.groupby(by =['treatment', 'BR']):\n",
-    "#     print(treatment_BR_groupby_df)\n",
-    "    #create corr_df with a column for each compound beloning to the group\n",
     "\n",
     "\n",
+    "#within a compound between BRs\n",
     "for treatment_compound, treatment_compound_groupby_df in df.groupby(by =['treatment', 'compound']):\n",
     "    treatment = treatment_compound[0]\n",
     "    compound = treatment_compound[1]\n",
@@ -722,29 +750,20 @@
     "\n",
     "    \n",
     "    #remove columns with n< n_minimum i.e. 6\n",
-    "\n",
-    "    n_count_series = df_to_correlate.count()\n",
-    "    cunt = n_count_series.index[n_count_series[0] == 5].tolist()\n",
-    "    # cunt = n_count_series[n_count_series <= 6].index[0]\n",
-    "    \n",
-    "    # for single_BR in df_to_correlate:  #SHIT I TRIED DELETE WHEN n<n_minimum a vairable that will be fed to function but doesnt exist yet WORKS\n",
-    "    #     print(df_to_correlate[single_BR])\n",
-    "    #     n = df_to_correlate[single_BR].count()\n",
-    "    #     print(f'{single_BR} data n = {n}')\n",
+    "    df_to_correlate = df_to_correlate[[col for col in df_to_correlate.columns if df_to_correlate[col].count() > 5]] #generalise to (n_minimum - 1)\n",
+    "    removed_columns = [i for i in BR_list if i not in df_to_correlate.columns]\n",
+    "    if len(removed_columns) > 0:\n",
+    "        print(f'{treatment} for {compound} columns removed by n_minimum cut: {removed_columns}')\n",
     "\n",
     "    #do correlations WORKING\n",
-    "    # corr_matrix_BR = df_to_correlate.corr('pearson', min_periods=1)\n",
+    "    corr_matrix_BR = df_to_correlate.corr('pearson', min_periods=1)\n",
     "\n",
     "\n",
-    "    # p_value_matrix = calculate_pvalues(corr_matrix_BR)  #this is the function above it is dirty and needs to be cleaned but it will be how correlograms work from here on\n",
-    "\n",
-    "    # # removing collums the rows that have all 'NaN' vslues #will intergrate with the calculate p_value matric fun once n<6 removed\n",
-    "    # p_value_matrix_clean = p_value_matrix.dropna(axis=1, how='all')\n",
-    "    # p_value_matrix_clean = p_value_matrix_clean.dropna(axis=0, how='all')\n",
-    "\n",
-    "    #plot shit # and yes i need to modulatrise and will do once we have it runnning\n",
+    "    p_value_matrix = calculate_pvalues(corr_matrix_BR)  \n",
+    "    \n",
+    "    #plot shit #this runs but the figures dont get spat out? REMI WHYYYY\n",
     "    fig, ax = plt.subplots(figsize=(16, 10))\n",
-    "    mask = np.invert(np.tril(p_value_matrix < p_value))\n",
+    "    mask = np.invert(np.tril(p_value_matrix < 0.05)) #generalise p_value = 0.05\n",
     "\n",
     "    heatmap = sns.heatmap(corr_matrix_BR, vmin=-1, vmax=1,\n",
     "                            annot=True, cmap='BrBG', mask=mask, annot_kws={\"size\": 8})\n",
@@ -755,7 +774,23 @@
     "        rotation=45,\n",
     "        horizontalalignment='right')\n",
     "    ax.set_ylabel('')\n",
-    "    ax.set_xlabel('')\n"
+    "    ax.set_xlabel('')\n",
+    "    plt.close('all')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#within a BR between compounds\n",
+    "# for treatment_BR, treatment_BR_groupby_df in df.groupby(by =['treatment', 'BR']):\n",
+    "#     print(treatment_BR_groupby_df)\n",
+    "    #create corr_df with a column for each compound beloning to the group\n",
+    "\n",
+    "##REMI: I believe we could be smart and have one series of modular functions that does both... thoughts?\n",
+    "# Also wahat do I do with the figures I generate? they are too much to be spat out of a cell and need to be organised in a way that makes sense... a df of figures?"
    ]
   }
  ],
