better notes for remi in intro

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -8,17 +8,21 @@
     "# %% LE PLAN\n",
     "\n",
     "'''\n",
-    "    1. df reorganisation (factorial) and creation of ratios\n",
-    "    2. calculate and save to table average, SD and SEM\n",
-    "    3. ShapiroWilk test for normailty (note if not noirmal) and statistical analysis\n",
-    "    4. plot histograms with SEM and ** for each treatment, compound and BR\n",
-    "    5. test normaility for correlation if normal : \n",
+    "    1. df reorganisation (factorial) \n",
+    "    2. creation of ratios\n",
+    "    3. test for and remove outliers\n",
+    "    4. get aggrogate stats (mean, SD for each treatment group)\n",
+    "    5. test normaility \n",
+    "    6. statistical test for quantative vals (1 dependant vairable - one way ANOVA, post hoc tukey / 2 - two way ANOVA, one way ANOVA, post hoc tukey)\n",
+    "    7. histograms with significance as chosen (i.e. one way to tukey ALL / only if passes two way )\n",
+    "    8. qualitative analysis:\n",
+    "        normal correlogram, square correlogram, car correlogram (within region or compound/ratio)\n",
+    "                            normal : \n",
     "                                                    --> pearson product coirrelation plots \n",
     "                            non-parametric data :\n",
     "                                                    --> spearman coirrelation plots      \n",
     "                                                    \n",
-    "            produced for each BR comparing compunds and compound comparing BR\n",
-    "    6. PCA for  complete compound_BR/ ratio_BR sets between groups \n",
+    "    9. PCA for  complete compound_BR/ ratio_BR sets between groups \n",
     "\n",
     "\n",
     "'''"
@@ -655,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
