--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -85,18 +85,19 @@
     "                       'GLN': ['GLU']}\n",
     "\n",
     "experimental_info = {'dose_response': {'groups':[1,2,3,4], 'independant_vars': ['TCB2']}, \n",
-    "                     'agonist_antagonist':{'groups':[1,3,5,6], 'independant_vars': ['TCB2', 'MDL', ], 'outliers': 'grubbs', 'correlation_statistics': 'pearson', 'posthoc': 'tukey', 'histogram_display': ['oneWAY_ANOVA', 'twoWAY_ANOVA']}}\n",
-    "#DOSE RESPONCE STATS TO ADD:    'outliers': 'grubbs', 'correlation_statistics': 'pearson', 'posthoc': 'tukey', 'histogram_display': ['oneWAY_ANOVA']\n",
-    "#AGG ANTAG STATS TO ADD:        'outliers': 'grubbs', 'correlation_statistics': 'pearson', 'posthoc': 'tukey', 'histogram_display': ['oneWAY_ANOVA', 'twoWAY_ANOVA']\n",
-    "\n",
-    "# two_way_anova = pg.anova(data=df_anova_working, dv='value', between=[\n",
-    "#                                       ('ANT_MDL'), ('AG_TCB2')], detailed=True).round(3)\n",
+    "                     'agonist_antagonist':{\n",
+    "                         'groups':[1,3,5,6], \n",
+    "                         'independant_vars': ['TCB2', 'MDL', ], \n",
+    "                         'outliers': 'grubbs', \n",
+    "                         'correlation_statistics': 'pearson', \n",
+    "                         'quantitative_statistics': {'twoway_anova':True, 'oneoway_tukey':True, 'tukey':True}}}\n",
     "\n",
     "\n",
     "filename = 'TCB2_data_HPLC.csv'  # TCB2 #using current working directory plus file name \n",
     "\n",
     "saveMetadata(filename, treatment_mapping, experimental_info)\n",
     "getSingleHistogram(filename, 'agonist_antagonist', '5HT', 'CC', 0.05, from_scratch = True)\n",
+    "getQuantitativeStats(filename, region, compound, experiment, ['twoway_anova', 'oneway_anova', 'tukey'])\n",
     "\n"
    ]
   },
@@ -925,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
