--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -145,15 +145,15 @@
     "saveMetadata(\n",
     "    filename, treatment_mapping=treatment_mapping, experimental_info=experimental_info\n",
     ")\n",
-    "# quantitativeHistogram(\n",
-    "#     filename,\n",
-    "#     compound=\"DA\",\n",
-    "#     region=\"SC\",\n",
-    "#     experiment=\"agonist_antagonist\",\n",
-    "#     outlier_test=\"grubbs\",\n",
-    "#     p_value_threshold=0.05,\n",
-    "#     from_scratch=True,\n",
-    "# )\n",
+    "quantitativeHistogram(\n",
+    "    filename,\n",
+    "    compound=\"DA\",\n",
+    "    region=\"SC\",\n",
+    "    experiment=\"agonist_antagonist\",\n",
+    "    outlier_test=\"grubbs\",\n",
+    "    p_value_threshold=0.05,\n",
+    "    from_scratch=True,\n",
+    ")\n",
     "correlogram(filename, p_value_threshold=0.05)\n",
     "# histogram(filename, experiment='agonist_antagonist', compound='DA', region=\"CC\", p_value_threshold=0.05)\n"
    ]
