--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -204,18 +204,18 @@
     "}\n",
     "\n",
     "filename = \"TCB2_data_HPLC.csv\"  # TCB2 #using current working directory plus file name\n",
-    "HT_filename = \"TCB2_data_HT.csv\"\n",
+    "# HT_filename = \"TCB2_data_HT.csv\"\n",
     "\n",
-    "saveMetadata(\n",
-    "    filename, treatment_mapping=treatment_mapping, experimental_info=experimental_info\n",
-    ")\n",
+    "# saveMetadata(\n",
+    "#     filename, treatment_mapping=treatment_mapping, experimental_info=experimental_info\n",
+    "# )\n",
     "\n",
-    "quantitativeHistogram(\n",
-    "    filename,\n",
-    "    p_value_threshold=0.05,\n",
-    ")\n",
+    "# quantitativeHistogram(\n",
+    "#     filename,\n",
+    "#     p_value_threshold=0.05,\n",
+    "# )\n",
     "\n",
-    "# correlogram(filename, p_value_threshold=0.05)\n",
+    "correlogram(filename, p_value_threshold=0.05)\n",
     "# histogram(filename, experiment='agonist_antagonist', compound='DA', region=\"CC\", p_value_threshold=0.05)\n"
    ]
   },
