cleaning run file

--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -5,38 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "HPLC ANALSIS OF COMPOUNDS\n",
-    "\n",
-    "Set:\n",
-    "    filename to .csv with data structure:\n",
-    "            'mouse_no' 'group_no' 'compound_region'\n",
-    "                1           2           ng_mg\n",
-    "    treatment_mapping: \n",
-    "    compound_ratio_mapping: dictionary of the ratios of interest \n",
-    "    experimental_info: \n",
-    "    \n",
-    "\n",
-    "QUANTITATIVE ANALYSIS\n",
-    "    aggrogate stats\n",
-    "    histograms comparing mean +/- SEM\n",
-    "\n",
-    "QUALITATIVE ANALYSIS\n",
-    "    correlograms\n",
-    "    PCA"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Imports and Constants:"
+    "HOW MUCH RED PAINT DOES IT TAKE TO BE FUNNIER THAN SOUND?"
    ]
   },
   {
@@ -56,12 +25,13 @@
     }
    ],
    "source": [
+    "# IMPORTS/CONSTANTS FOR EXPERIMENT\n",
+    "\n",
     "from main import *  # Must be reimported when changes made to module file\n",
     "\n",
     "%load_ext autoreload \n",
     "%autoreload 2\n",
     "\n",
-    "# TO DO : This dhould be applied to the big df from the get go to not have to do it every time ? REMI i dont get it \n",
     "treatment_mapping = (\n",
     "    {  # TO DO : change name to treatment_info and add columns in df REMI\n",
     "        1: {\"treatment\": \"vehicles\",\n",
@@ -90,7 +60,7 @@
     "            },\n",
     "    }\n",
     ")\n",
-    "compound_ratio_mapping = {\n",
+    "compound_ratio_mapping = { #REMI check useage \n",
     "    \"DOPAC\": [\"DA\"],\n",
     "    \"5HIAA\": [\"5HT\"],\n",
     "    \"3MT\": [\"DA\"],\n",
@@ -168,15 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#I STILL THINK IT WOULD BE NICE TO HAVE a way to do all thew outliers together \n",
-    "#as when you load a new dataset that is what you may need to donot just case by case\n",
-    "#there is also less vaiaabliity if you sit once for all nt flavored by mood \n",
+    "#CHOSE ALL OUTLIERS IN LOOP - REMI (ratios only compound_ratio_mapping)\n",
     "\n",
-    "#THIS CELL WOULD BE STEP ONE WHICH IS OUTLIERS\n",
     "\n"
    ]
   },
@@ -200,10 +167,6 @@
    ],
    "source": [
     "#QUANTITATIVE HISTOGRAMS\n",
-    "\n",
-    "#JJB REMI discuss how i fixed the order because you func buildHistogramData() looks like it should generate the same thing i.e. the order of groups_id acending,  but its different \n",
-    "#also I think the ordering should be done in experimental info when you input the data the order you input the 'groups' is the ordre they will be plotted \n",
-    "#REMI BUG FIX: FileNotFoundError: [Errno 2] No such file or directory: '/Users/jasminebutler/Desktop/phd/input/cache/TCB2_data_HPLC/agonist_antagonist_for_5HIAA/5HT_in_AC.pkl'\n",
     "\n",
     "quantitativeHistogram( \n",
     "    filename,\n",
