--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -1114,6 +1114,7 @@
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "\n",
+    "#REMI / JAS w coffee this needs to be adjusted so its flexible between compounds between regions ect.... I was thinking a dict entry?\n",
     "# line plot to show what a correlation is \n",
     "compound= 'GLU'\n",
     "regions=['V', 'OF'] # y , x\n",
