graph theory build start (dont save things in debug)

--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -1607,7 +1607,7 @@
     }
    ],
    "source": [
-    "#show a single correlation #JJB make a funciton pls babe\n",
+    "#show a single correlation #REMI/JJB make a funciton pls babe\n",
     "#CONSTRUCTION\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
