input dicts complete missing only regions and compounds which are not used yet but needed to keep with project

--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -1841,6 +1841,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "##### MAKE DOCS LAZY GIRL #####\n",
+    "\n",
+    "# outlier tests  = ['grubbs', 'ROUT']  #todo add code for ROUT\n",
+    "# post hoc tests = [ 'pLSD' , 'tukey' ] #todo add code for\n",
+    "# quantitative stats = ['two_way_anova', 'one_way_anova', 'tukey'] #TODO this should not be here but with post hoc not written yet\n",
+    "# correlative stats = ['pearson', 'spearmam', 'kendall']\n",
+    "\n",
+    "#DFs floating around\n",
+    "# aggergate_stats, quantative_stats, compound_and_ratio_df ++graph_stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
