work with new project, add basic validator

--- a/RUN.ipynb
+++ b/RUN.ipynb
@@ -9,21 +9,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TREATMENT MAPPING {1: {'treatment': 'young_WT', 'color': 'white', 'experiments': ['Alzheimers']}, 2: {'treatment': 'young_AD', 'color': 'bisque', 'experiments': ['Alzheimers']}, 3: {'treatment': 'old_WT', 'color': 'red', 'experiments': ['Alzheimers']}, 4: {'treatment': 'old_AD', 'color': 'firebrick', 'experiments': ['Alzheimers']}} SAVED TO /home/remi/phd/input/cache/ALZHEIMERS_HPLC SUBCACHE\n",
+      "EXPERIMENTAL INFO {'Alzheimers': {'groups': [1, 2, 3, 4], 'independant_vars': ['age', 'genetic_background'], 'paired': False, 'parametric': True, 'outliers': 'grubbs'}} SAVED TO /home/remi/phd/input/cache/ALZHEIMERS_HPLC SUBCACHE\n",
+      "Invalid characters in identifier, replacing with '_' \n",
+      "BUILDING \"compound_and_ratios_df\"\n",
+      "BUILDING \"compound_df\"\n",
+      "BUILDING \"raw_df\"\n"
+     ]
+    }
+   ],
    "source": [
     "# IMPORTS/CONSTANTS FOR EXPERIMENT\n",
     "\n",
     "from main import *  # Must be reimported when changes made to module file\n",
     "\n",
-    "filename = \"TCB2_data_HPLC.csv\"  # TCB2 #using current working directory plus file name\n",
+    "filename = \"ALZHEIMERS_HPLC.xlsx\"  # TCB2 #using current working directory plus file name\n",
     "\n",
-    "HT_filename = \"TCB2_data_HT.csv\"\n",
+    "saveMetadata(\n",
+    "    filename,\n",
+    "    {  # TO DO : change name to treatment_info and add columns in df REMI\n",
+    "        1: {\n",
+    "            \"treatment\": \"young_WT\",\n",
+    "            \"color\": \"white\",\n",
+    "            \"experiments\": [\"Alzheimers\"],\n",
+    "        },\n",
+    "        2: {\n",
+    "            \"treatment\": \"young_AD\",\n",
+    "            \"color\": \"bisque\",\n",
+    "            \"experiments\": [\"Alzheimers\"],\n",
+    "        },\n",
+    "        3: {\n",
+    "            \"treatment\": \"old_WT\",\n",
+    "            \"color\": \"red\",\n",
+    "            \"experiments\": [\"Alzheimers\"],\n",
+    "        },\n",
+    "        4: {\n",
+    "            \"treatment\": \"old_AD\",\n",
+    "            \"color\": \"firebrick\",\n",
+    "            \"experiments\": [\"Alzheimers\"],\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"Alzheimers\": {\n",
+    "            \"groups\": [1, 2, 3, 4],\n",
+    "            \"independant_vars\": [\"age\", \"genetic_background\"],\n",
+    "            \"paired\": False,\n",
+    "            \"parametric\": True,  # idealy this would be True / False / Check : check would involve checking the data using the spearman test which should already be done then taking the majority of the data to be parametric or not chose that\n",
+    "            \"outliers\": \"grubbs\",\n",
+    "        },\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "correlogram(filename, \n",
+    "            experiment='Alzheimers', #  dose_response Alzheimers\n",
+    "            correlogram_type='compound',\n",
+    "            to_correlate='NA-DA', \n",
+    "            p_value_threshold=0.05, \n",
+    "            n_minimum=5, \n",
+    "            columns=[\"OF\",\"PL\",\"CC\", \"M\", \"SJ\",\"SL1\", \"SR1\", \"AC\", \"V\",  \n",
+    "                     \"Am\", \"dH\", \"vH\", \"NAc\", \"VM\", \"DM\",\"VL\", \"DL\", \"MD\",  \"VPL\",  \"VPR\", \n",
+    "                     \"DG\", \"Y\",  \"SC\",\"SN\", \"VTA\", \"DR\",\"MR\", \"CE\"],\n",
+    "            from_scratch=True,\n",
+    "            \n",
+    "            )\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "\n",
+    "network(filename, \n",
+    "            experiment='Alzheimers', #  dose_response Alzheimers\n",
+    "            correlogram_type='compound',\n",
+    "            to_correlate='NA-DA', \n",
+    "            p_value_threshold=0.05, \n",
+    "            n_minimum=5, \n",
+    "            columns=[\"OF\",\"PL\",\"CC\", \"M\", \"SJ\",\"SL1\", \"SR1\", \"AC\", \"V\",  \n",
+    "                     \"Am\", \"dH\", \"vH\", \"NAc\", \"VM\", \"DM\",\"VL\", \"DL\", \"MD\",  \"VPL\",  \"VPR\", \n",
+    "                     \"DG\", \"Y\",  \"SC\",\"SN\", \"VTA\", \"DR\",\"MR\", \"CE\"],\n",
+    "            from_scratch=True,\n",
+    "            \n",
+    "            )\n"
    ]
   },
   {
@@ -1550,105 +1627,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RETRIEVED \"compound_and_ratios_df_aggregate_stats\" FROM \"TCB2_data_HPLC\" CACHE\n"
+      "RETRIEVED \"quantitative_stats\" FROM \"TCB2_data_HPLC\" CACHE\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>treatment</th>\n",
-       "      <th>region</th>\n",
-       "      <th>compound</th>\n",
-       "      <th>experiment</th>\n",
-       "      <th>shapiro_F</th>\n",
-       "      <th>shapiro_p</th>\n",
-       "      <th>is_valid</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>sem</th>\n",
-       "      <th>values</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>102729</th>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>SR1</td>\n",
-       "      <td>GLU</td>\n",
-       "      <td>dose_response</td>\n",
-       "      <td>0.912970</td>\n",
-       "      <td>0.264357</td>\n",
-       "      <td>True</td>\n",
-       "      <td>637.339188</td>\n",
-       "      <td>216.532114</td>\n",
-       "      <td>65.286889</td>\n",
-       "      <td>[235.746186, 318.7504687, 651.7335814, 724.817...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104561</th>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>V</td>\n",
-       "      <td>GLU</td>\n",
-       "      <td>dose_response</td>\n",
-       "      <td>0.965948</td>\n",
-       "      <td>0.842957</td>\n",
-       "      <td>True</td>\n",
-       "      <td>896.767045</td>\n",
-       "      <td>457.202501</td>\n",
-       "      <td>137.851741</td>\n",
-       "      <td>[178.7621117, 275.818618, 999.8386236, 1101.17...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       treatment region compound     experiment  shapiro_F  shapiro_p  \\\n",
-       "102729  vehicles    SR1      GLU  dose_response   0.912970   0.264357   \n",
-       "104561  vehicles      V      GLU  dose_response   0.965948   0.842957   \n",
-       "\n",
-       "        is_valid        mean         std         sem  \\\n",
-       "102729      True  637.339188  216.532114   65.286889   \n",
-       "104561      True  896.767045  457.202501  137.851741   \n",
-       "\n",
-       "                                                   values  \n",
-       "102729  [235.746186, 318.7504687, 651.7335814, 724.817...  \n",
-       "104561  [178.7621117, 275.818618, 999.8386236, 1101.17...  "
+       "Index([0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       ...\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "      dtype='int64', length=187)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#GET AGGERGATED STATS DF\n",
-    "subselectDf(getAggregateStatsDf(filename), {\"treatment\": \"vehicles\", \"experiment\": \"dose_response\", \"region\":[\"SR1\", \"V\"], \"compound\":\"GLU\"})\n",
+    "getQuantitativeStats(filename).index\n",
     "#second pram is a dict of colname and subgroup to select\n"
    ]
   },
@@ -1876,7 +1881,7 @@
    "source": [
     "#GRAPH THEORY \n",
     "\n",
-    "network(filename, \n",
+    "correlogram(filename, \n",
     "            experiment='agonist_antagonist', #  dose_response agonist_antagonist\n",
     "            correlogram_type='compound',\n",
     "            to_correlate='5HT-DA', \n",
@@ -1919,7 +1924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
