finished setting up tests + mild architecture correction

--- a/TESTING.ipynb
+++ b/TESTING.ipynb
@@ -1129,210 +1129,10 @@
         }
       ],
       "source": [
-        "project.statistics.df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>region</th>\n",
-              "      <th>compound</th>\n",
-              "      <th>test</th>\n",
-              "      <th>is_significant</th>\n",
-              "      <th>result</th>\n",
-              "      <th>p_value_threshold</th>\n",
-              "      <th>p_value</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1211</th>\n",
-              "      <td>DM</td>\n",
-              "      <td>3MT</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2), (MDL, TCB2+MDL)], [0.0102, 0.00...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1229</th>\n",
-              "      <td>VL</td>\n",
-              "      <td>3MT</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(TCB2+MDL, vehicles)], [0.0194]]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1238</th>\n",
-              "      <td>Am</td>\n",
-              "      <td>3MT/5HIAA</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2+MDL), (TCB2, TCB2+MDL), (TCB2+MDL...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1247</th>\n",
-              "      <td>IC</td>\n",
-              "      <td>3MT/5HIAA</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2+MDL), (TCB2+MDL, vehicles)], [0.0...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1265</th>\n",
-              "      <td>VTA</td>\n",
-              "      <td>3MT/5HIAA</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2+MDL)], [0.0064]]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38891</th>\n",
-              "      <td>DG</td>\n",
-              "      <td>VMA/LSER</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2)], [0.0023]]</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38921</th>\n",
-              "      <td>DG</td>\n",
-              "      <td>VMA/NA</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2), (MDL, TCB2+MDL), (TCB2, vehicle...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38951</th>\n",
-              "      <td>DG</td>\n",
-              "      <td>VMA/TAU</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(TCB2, vehicles), (TCB2+MDL, vehicles)], [0....</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38966</th>\n",
-              "      <td>SR6</td>\n",
-              "      <td>VMA/TAU</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2+MDL), (MDL, vehicles)], [0.0324, ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38981</th>\n",
-              "      <td>DG</td>\n",
-              "      <td>VMA/THR</td>\n",
-              "      <td>tukey</td>\n",
-              "      <td>True</td>\n",
-              "      <td>group1    group2  meandiff   p-adj   lowe...</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>[[(MDL, TCB2), (TCB2, vehicles)], [0.0019, 0.0...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>3678 rows × 7 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "      region   compound   test  is_significant  \\\n",
-              "1211      DM        3MT  tukey            True   \n",
-              "1229      VL        3MT  tukey            True   \n",
-              "1238      Am  3MT/5HIAA  tukey            True   \n",
-              "1247      IC  3MT/5HIAA  tukey            True   \n",
-              "1265     VTA  3MT/5HIAA  tukey            True   \n",
-              "...      ...        ...    ...             ...   \n",
-              "38891     DG   VMA/LSER  tukey            True   \n",
-              "38921     DG     VMA/NA  tukey            True   \n",
-              "38951     DG    VMA/TAU  tukey            True   \n",
-              "38966    SR6    VMA/TAU  tukey            True   \n",
-              "38981     DG    VMA/THR  tukey            True   \n",
-              "\n",
-              "                                                  result  p_value_threshold  \\\n",
-              "1211        group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "1229        group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "1238        group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "1247        group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "1265        group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "...                                                  ...                ...   \n",
-              "38891       group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "38921       group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "38951       group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "38966       group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "38981       group1    group2  meandiff   p-adj   lowe...               0.05   \n",
-              "\n",
-              "                                                 p_value  \n",
-              "1211   [[(MDL, TCB2), (MDL, TCB2+MDL)], [0.0102, 0.00...  \n",
-              "1229                  [[(TCB2+MDL, vehicles)], [0.0194]]  \n",
-              "1238   [[(MDL, TCB2+MDL), (TCB2, TCB2+MDL), (TCB2+MDL...  \n",
-              "1247   [[(MDL, TCB2+MDL), (TCB2+MDL, vehicles)], [0.0...  \n",
-              "1265                       [[(MDL, TCB2+MDL)], [0.0064]]  \n",
-              "...                                                  ...  \n",
-              "38891                          [[(MDL, TCB2)], [0.0023]]  \n",
-              "38921  [[(MDL, TCB2), (MDL, TCB2+MDL), (TCB2, vehicle...  \n",
-              "38951  [[(TCB2, vehicles), (TCB2+MDL, vehicles)], [0....  \n",
-              "38966  [[(MDL, TCB2+MDL), (MDL, vehicles)], [0.0324, ...  \n",
-              "38981  [[(MDL, TCB2), (TCB2, vehicles)], [0.0019, 0.0...  \n",
-              "\n",
-              "[3678 rows x 7 columns]"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "project.statistics.select({\"test\": \"tukey\", \"is_significant\": True})"
+        "project.statistics.df\n",
+        "project.statistics.significant_tests\n",
+        "project.statistics.significant_results\n",
+        "project.statistics.insufficent_data"
       ]
     }
   ],
